syntax = "proto3";

option go_package = "github.com/irunchon/tinyurl";

import "google/api/annotations.proto";

package tinyurl;

service ShortenURL{
  rpc GetShortURL(LongURL) returns (ShortURL){
    option (google.api.http) = {
      post: "/v1/set_url"
      body: "*"
    };
  }
  rpc GetLongURL(Hash) returns(LongURL){
    option (google.api.http) = {
      get: "/{hash}"
    };
  }
}

message LongURL{
  string long_url = 1;
}

message ShortURL{
  string short_url = 1;
}

message Hash{
  string hash = 1;
}
